--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -25,6 +25,8 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
+import init.ugglite_variants.rc
+
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
@@ -36,6 +38,15 @@ on init
     chown system system /dev/ion
 
     setprop ro.board.platform msm8937
+
+on boot
+# DT2W
+    chown system system /sys/devices/soc/78b7000.i2c/i2c-3/3-0038/fts_gesture_mode
+    chmod 660 /sys/devices/soc/78b7000.i2c/i2c-3/3-0038/fts_gesture_mode
+    chown system system /sys/goodix_gesture/gesture_enable
+    chmod 660 /sys/goodix_gesture/gesture_enable
+    write /sys/devices/soc/78b7000.i2c/i2c-3/3-0038/fts_gesture_mode 1
+    write /sys/goodix_gesture/gesture_enable 1
 
 on property:ro.crypto.state=encrypted
     start sbinqseecomd
